@@ -2,6 +2,7 @@
 -------------------
   * update documentation to use tobytes and frombytes, rather than tostring
     and fromstring (which are now deprecated)
+  * simplified how tests are run
 
 
 2012-01-23   0.5.0:
@@ -17,6 +18,7 @@
   * introduced tobytes, frombytes (tostring, fromstring are now deprecated)
   * updated development status
   * added sieve prime number example
+  * moved project to github: https://github.com/ilanschnell/bitarray
 
 
 2009-04-06   0.3.5:
